Fix/remove commands
- `brew for-each-formula`: fix bad RuboCop style fix
- `brew manpage-missing-commands`: remove because no longer working and
  handled by CI now.
- `brew prof`, `brew ruby`: migrate to Homebrew/brew in:
  https://github.com/Homebrew/brew/pull/3845

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 
 script:
   - brew style "$TRAVIS_REPO_SLUG"
-  - brew ruby -e true
+  - brew for-each-formula true
 
 notifications:
   email:
